# Handle2

./: .clang-format  .editorconfig  .gitignore  App.sln  CMakeLists.txt  Directory.Build.props  Handle2.sln  Handle2.slnx  LICENSE  README.md  build.ps1
.github/workflows/: main.yaml
src/Handle2/: FodyWeavers.xml  Handle2.csproj  Program.cs
src/Handle2/HandleInfo/: HandleInfoRetriever.cs
src/Interop/: AssemblyInfo.cpp  Interop.cpp  Interop.vcxproj  Interop.vcxproj.filters  api.cpp  dllmain.cpp  pch.h
src/Interop/interface/: api.h
src/Interop/ntdll/: ntdll_functions.h  winternl_extensions.h
src/Interop/utils/: device_path_to_drive_path_converter.h  exception.h  noncopyable.h  scoped_handle.h  string_conversion.h
src/app/: App.csproj  FodyWeavers.xml  Program.cs  locking_info_provider.h  main.cpp  ntdll_functions.h  parse_commandline_args.h  precompiled_header.h  procexpsys512_driver.h  procexpsys512_driver_service.h  version.rc.in  winternl_extensions.h
src/app/HandleInfo/: HandleInfoRetriever.cs
src/app/utils/: driver_service.h  enable_privilege.h  exception.h  expand_path_with_environment_variables.h  extract_procexp_resource_to_file.h  noncopyable.h  normalize_path.h  preprocessor.h  process_info.h  scoped_handle.h  serialization.h  string_conversion.h
src/test/: ProgramTest.cs  Test.csproj  UnitTest1.cs  precompiled_header.h
src/test/HandleInfo/: HandleInfoRetrieverTest.cs
src/test/app/: locking_info_provider_test.cpp  parse_commandline_args_test.cpp
src/test/utils/: utils.h
tools/cmake/: clang_format.cmake  compiler_options.cmake  download_PROCEXP152SYS_file.cmake  version.cmake
tools/cmake/libs/: catch2.cmake  (+1 more)
(+21 files in other folders)
